--- a/templates/fragments/menu.html
+++ b/templates/fragments/menu.html
@@ -1,18 +1,18 @@
 
 <nav class="uk-navbar-container" uk-navbar uk-sticky>
     <div class="uk-navbar-center nav-overlay">
-        <a href="/" class="uk-navbar-item uk-logo" style="margin-right: 100px" >Grzes</a>
+        <a href="/weights/home/" class="uk-navbar-item uk-logo" style="margin-right: 100px" >Grzes</a>
         <ul class="uk-navbar-nav">
             <li class="uk-parent"><a href="/growths/">Wzrost</a></li>
             <li class="uk-parent"><a href="/weights">Waga</a></li>
-            <li class="uk-parent"><a href="/pressures/">Cisnienie</a></li>
+            <li class="uk-parent"><a href="/pressures/">Ciśnienie</a></li>
             <li class="uk-parent"><a href="/pulses/">Tętno</a></li>
             <li>
                 <a href="#">Opcje</a>
                 <div class="uk-navbar-dropdown">
                     <ul class="uk-nav uk-navbar-dropdown-nav">
-                        <li><a href="/weights/">Info</a></li>
-                        <li><a href="/weights/">profil</a></li>
+                        <li><a href="/weights/info/">Info</a></li>
+                        <li><a href="/weights/error/">profil</a></li>
                     </ul>
                 </div>
             </li>
