--- a/app_pulse/templates/app_pulse/all_pulses.html
+++ b/app_pulse/templates/app_pulse/all_pulses.html
@@ -30,9 +30,9 @@
                 new Chart(document.getElementById("line-chart"), {
                     type: 'line',
                     data: {
-                        labels: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11],
+                        labels: {{chart_x}},
                         datasets: [{
-                            data: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11],
+                            data: {{chart_y}},
                             label: "Tętno",
                             borderColor: "#3e95cd",
                             fill: false
