--- a/templates/fragments/menu.html
+++ b/templates/fragments/menu.html
@@ -18,7 +18,7 @@
             </li>
         </ul>
         <span class="uk-navbar-item" style="margin-left: 100px" >Użytkownik</span>
-        <span class="uk-navbar-item">Data</span>
+        <span class="uk-navbar-item">{% now "D, d M Y" %}</span>
         <a href="/" uk-icon="icon:  sign-out; ratio: 1.1" uk-tooltip="Wyloguj"></a>
 
     </div>
