--- a/app_growth/templates/app_growth/all_growths.html
+++ b/app_growth/templates/app_growth/all_growths.html
@@ -38,9 +38,9 @@
                 new Chart(document.getElementById("line-chart"), {
                     type: 'line',
                     data: {
-                        labels: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11],
+                        labels: {{chart_x}},
                         datasets: [{
-                            data: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11],
+                            data: {{chart_y}},
                             label: "Wzrost",
                             borderColor: "#3e95cd",
                             fill: false
