--- a/app_weight/templates/app_weight/all_weights.html
+++ b/app_weight/templates/app_weight/all_weights.html
@@ -69,8 +69,8 @@
             </script>
     </div>
 
-    <a href="weight" uk-icon="icon: copy" uk-tooltip="Dodaj"></a>
-    <a href="weight" uk-icon="icon: trash" uk-tooltip="Wyczyść"></a>
+    <a href="add" uk-icon="icon: copy" uk-tooltip="Dodaj"></a>
+    <a href="delete/all" uk-icon="icon: trash" uk-tooltip="Wyczyść"></a>
     <table class="uk-table uk-table-striped uk-table-hover uk-table-small" uk-sortable>
         <thead>
             <tr>
@@ -90,9 +90,9 @@
                 <td>{{ value.date}}</td>
                 <td>{{ value.comments }}</td>
                 <td>
-                    <a href=" " uk-icon="icon: file-edit" uk-tooltip="Edytuj"></a>
+                    <a href="{% url 'edit_weight_url' id=value.id %}" uk-icon="icon: file-edit" uk-tooltip="Edytuj"></a>
                     <a href="{% url 'weight_details_url' id=value.id %}" uk-icon="icon: info" uk-tooltip="Szczegóły"></a>
-                    <a href=" " uk-icon="icon: trash" uk-tooltip="Usuń"></a>
+                    <a href="{% url 'delete_weight_url' id=value.id %}" uk-icon="icon: trash" uk-tooltip="Usuń"></a>
                 </td>
             </tr>
         {% endfor %}
