--- a/templates/fragments/menu.html
+++ b/templates/fragments/menu.html
@@ -12,7 +12,7 @@
                 <div class="uk-navbar-dropdown">
                     <ul class="uk-nav uk-navbar-dropdown-nav">
                         <li><a href="/weights/info/">Info</a></li>
-                        <li><a href="/weights/error/">profil</a></li>
+                        <li><a href="/weights/home/">profil</a></li>
                     </ul>
                 </div>
             </li>
