--- a/app_weight/templates/app_weight/all_weights.html
+++ b/app_weight/templates/app_weight/all_weights.html
@@ -86,8 +86,8 @@
             <tr>
                 <td>NA</td>
                 <td>{{ value.weight |floatformat:1}}</td>
-{#                <td>{{ value.date |date:'D, d M Y,'}} {{value.date |time:"H:i"}}</td>#}
-                <td>{{ value.date}}</td>
+                <td>{{ value.date |date:'D, d M Y,'}} {{value.date |time:"H:i"}}</td>
+{#                <td>{{ value.date}}</td>#}
                 <td>{{ value.comments }}</td>
                 <td>
                     <a href="{% url 'edit_weight_url' id=value.id %}" uk-icon="icon: file-edit" uk-tooltip="Edytuj"></a>
