--- a/app_weight/templates/app_weight/add_weight.html
+++ b/app_weight/templates/app_weight/add_weight.html
@@ -12,35 +12,44 @@
             <h2 class="uk-heading-divider" style="position: relative">Waga - Dodaj</h2>
         </div>
 
-        <form style="width:300px; margin: auto" action="{% url 'add_weight_url' %}" method="POST">
+        <div style="height: 50px"></div>
+        <div class="uk-card uk-card-default uk-border-rounded">
+            <div class="uk-card-body">
+                <form style="width:300px; margin: auto" action="" method="POST">
 
-            {% csrf_token %}
+                    {% csrf_token %}
 
-            <div class="uk-margin">
-                <label>Waga</label>
-                <input value="{{ weight }}" type="number" class="uk-input" step="0.1" min="10" max="150"
-                       required="required">
+                    <div class="uk-margin">
+                        <label>Waga</label>
+                        <input name="weight" type="number" class="uk-input" step="0.1" min="10" max="150"
+                               required="required">
+                    </div>
+
+                    <div class="uk-margin">
+                        <label>Data</label>
+                        <Input name="date" type="datetime-local" class="uk-input" min="2020-01-01T00:00" value="{{ time_now }}" max="{{time_now}}" required="required">
+                    </div>
+
+                    <div class="uk-margin">
+                        <label>Uwagi</label>
+                        <textarea name="comment" class="uk-textarea" rows="4"></textarea>
+                    </div>
+
+                    <div class="uk-position-relative uk-position-center uk-position-top-center" >
+                        <a href="/weights/" class="uk-icon-link uk-margin-small-right" uk-icon="close"
+                           uk-tooltip="Anuluj"></a>
+                        <a href="/weights/add" class="uk-icon-link uk-margin-small-right" uk-icon="trash"
+                           uk-tooltip="Wyczyść"></a>
+                        <button href="" class="uk-icon-link uk-margin-small-right" uk-icon="check" type="submit"
+                                uk-tooltip="Zapisz"></button>
+
+                    </div>
+                    <div class="uk-text-danger uk-margin-small-top">
+                    {{ field.errors }}
+                    </div>
+                </form>
             </div>
-
-            <div class="uk-margin">
-                <label>Data</label>
-                <Input value="{{ date }}" type="date" class="uk-input" required="required">
-            </div>
-
-            <div class="uk-margin">
-                <label>Uwagi</label>
-                <textarea value="{{ comment }}" class="uk-textarea" rows="4"></textarea>
-            </div>
-
-{#            <a href="/weights/" class="uk-icon-link uk-margin-small-right" uk-icon="close" uk-tooltip="Anuluj"></a>#}
-{#            <a href="/weights/add" class="uk-icon-link uk-margin-small-right" uk-icon="trash" uk-tooltip="Wyczyść"></a>#}
-{#            <a href="/weights/add" class="uk-icon-link uk-margin-small-right" uk-icon="check" type="submit" uk-tooltip="Zapisz"></a>#}
-
-            <a href="/weights/"><input class="uk-button uk-button-danger" type="button" value="Anuluj"></a>
-            <input class="uk-button uk-button-primary" type="submit" value="Zapisz">
-
-        </form>
-
+        </div>
         <div class="uk-padding"></div>
 
     </div>
