--- a/app_weight/templates/app_weight/info.html
+++ b/app_weight/templates/app_weight/info.html
@@ -32,6 +32,9 @@
     <span uk-icon="icon: info" uk-tooltip="Info / Szczegóły" ></span>
     <span class="uk-text-muted">Informacje lub szczegóły</span>
     <br>
+    <span uk-icon="icon: question; ratio: 0.6" uk-tooltip="Podpowiedź" ></span>
+    <span class="uk-text-muted">Podpowidź</span>
+    <br>
     <p></p>
     <span class="uk-text-muted">Dane na wykresach można wyłączać naciskając na legędę.</span>
     <br>
