--- a/app_pressure/templates/app_pressure/pressure_details.html
+++ b/app_pressure/templates/app_pressure/pressure_details.html
@@ -18,7 +18,7 @@
                     <div class="uk-width-expand">
                         <h3 class="uk-card-title uk-position-relative uk-position-center">Statystyki:</h3>
                         <div class="uk-position-relative uk-position-center"><b> Liczba
-                            Wpisów:</b> {{ shrink_statistical_data.pressure__count }}</div>
+                            Wpisów:</b> {{ shrink_statistical_data.shrink__count }}</div>
                         <div class="uk-flex uk-flex-between ">
                             <div><b> MIn. Cisnienie Skurczowe:</b> {{ shrink_statistical_data.shrink__min|floatformat:2 }}</div>
                             <div><b> Śr. Cisnienie Skurczowe: </b>{{ shrink_statistical_data.shrink__avg|floatformat:2 }}</div>
