--- a/app_pressure/templates/app_pressure/all_pressures.html
+++ b/app_pressure/templates/app_pressure/all_pressures.html
@@ -35,10 +35,16 @@
             </div>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
             <script inline="javascript">
+
+                var label_list = [];
+                {% for value in chart_x %}
+                label_list.push("{{ value }}");
+                {% endfor %}
+
                 new Chart(document.getElementById("line-chart"), {
                     type: 'line',
                     data: {
-                        labels: {{chart_x}},
+                        labels: label_list,
                         datasets: [{
                             data: {{chart_y1}},
                             label: "Ciśnienie skurczowe",
