--- a/app_weight/templates/app_weight/home.html
+++ b/app_weight/templates/app_weight/home.html
@@ -39,6 +39,16 @@
 
     <h2>KORZYSTANIE Z PROGRAMU NIE ZASTĘPUJE PORADY LEKARSKIEJ.</h2>
 
+    <div class="uk-grid" data-uk-grid-margin="">
+        <div class="uk-width-medium-1-1 uk-row-first">
+            <div class="uk-vertical-align" style="background-color: #F5F5F5; height: 450px;">
+                <h3 class="uk-heading-small">Twoje BMI:</h3>
+
+
+
+                </div>
+            </div>
+
     <div class="uk-padding"></div>
 </div>
 {% endblock %}
